# Scrapy

./: ADVANCED_FEATURES_IMPLEMENTATION.md  CLEANUP_AND_WAREHOUSE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_STATUS.md  README.md  UConn Scraper Future Development Plan.txt  check_codeblock.py  manage_readme.py  requirements.txt  run_the_scrape  test_performance_report.json  test_validation_output.jsonl  tmp_check_readme.py
Scraping_project/: .gitignore  ASYNC_ENRICHMENT_SUMMARY.md  CHECKPOINT_SYSTEM_SUMMARY.md  CONFIGURATION_VALIDATION_SUMMARY.md  CONTRIBUTING.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  FIXES_SUMMARY.md  INTERSTAGE_VALIDATION_SUMMARY.md  Makefile  PYTHON_312_COMPATIBILITY_AUDIT.md  PYTHON_312_FINAL_SUMMARY.md  PYTHON_312_MIGRATION_COMPLETE.md  README.md  REFACTORING_AND_VISUALIZER_SUMMARY.md  SPRINT_BACKLOG.md  VALIDATION_SYSTEM_SUMMARY.md  YAKE_INTEGRATION.md  main.py  migrate_data_paths.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-frozen.txt  requirements-minimal.txt  requirements-py312.txt  requirements.txt  ruff.toml  run.bat  run_spider.py  run_tests.py  scrapy.cfg  setup.sh  test_crawler.py  test_performance_report.json  test_runner.py  test_validation_output.jsonl  validate_tests.py
Scraping_project/.github/workflows/: ci.yml
Scraping_project/config/: development.yml  keywords.txt  production.yml
Scraping_project/data/: DATA_README.md  README.md
Scraping_project/data/analytics/: refresh_history.json
Scraping_project/data/config/: adaptive_depth.json  taxonomy.json  uconn_glossary.json  vendor_config.json
Scraping_project/data/datalake/: setup_duckdb.sql
Scraping_project/data/feedback/: stage2_feedback.json
Scraping_project/data/raw/: uconn_urls.csv
Scraping_project/data/samples/: __init__.py
Scraping_project/docs/: IMMEDIATE_PRIORITIES_COMPLETED.md  MISSING_FEATURES.md  PYTHON_312_MIGRATION.md  README_DEVOPS_SECTION.md  architecture.md  async_enrichment.md  checkpoint_system.md  code_reference.md  configuration_validation.md  data_warehouse_guide.md  debugging.md  development.md  devops_guide.md  future_plan.md  interstage_validation.md  java_warehouse_loader.md  nlp_enhancements.md  pipeline_improvement_plan.md  problems.md  project_internals.md  setup.md  stage1_master_plan.md  test_plan.md  validation_examples.md  validation_quick_reference.md
Scraping_project/java-etl-loader/: pom.xml
Scraping_project/orchestration/: monitoring_config.example.yml  monitoring_hooks.py  pipeline_dag.py  run_pipeline.sh
Scraping_project/samples/: __init__.py
Scraping_project/scrapy_uconn/: __init__.py  items.py  pipelines.py  settings.py
Scraping_project/scrapy_uconn/spiders/: advanced_spider.py
Scraping_project/src/: __init__.py  settings.py
Scraping_project/src/common/: __init__.py  adaptive_depth.py  alerts.py  checkpoint_middleware.py  checkpoints.py  config_keys.py  config_schema.py  config_validator.py  constants.py  content_analysis.py  content_classification.py  content_handlers.py  datalake_schema.py  domain_filter.py  enhanced_browser.py  enhanced_checkpoints.py  enhanced_metrics.py  error_handling.py  exporters.py  feedback.py  freshness.py  headless_browser.py  interstage_validation.py  keyword_expansion.py  lineage.py  link_graph.py  log_events.py  logging.py  logging_old.py  media_extraction.py  metrics.py  metrics_emitter.py  nlp.py  nlp_manager.py  nlp_processor.py  performance_metrics.py  pipeline_config.py  progress_display.py  prometheus_exporter.py  qa_generation.py  (+10 more)
Scraping_project/src/orchestrator/: analytics_engine.py  config.py  data_refresh 2.py  data_refresh.py  main.py  orchestrator_validation.py  pipeline.py  priority_queue.py
Scraping_project/src/stage1/: __init__.py  discovery_pipeline.py  discovery_spider 2.py  discovery_spider.py  stage1_weird_aspects.md
Scraping_project/src/stage2/: __init__.py  enhanced_validator.py  stage2_weird_aspects.md  validator 2.py  validator.py
Scraping_project/src/stage3/: __init__.py  async_enrichment.py  enrichment_pipeline.py  (+3 more)
Scraping_project/tests/: conftest.py  production_readiness.py  test_end_to_end.py
Scraping_project/tools/: README.md  analyze_link_graph.py  benchmark_enrichment.py  checkpoint_manager_cli.py  export_to_datalake.py  generate_changelog.py  init_datalake.py  migrate_data_paths.py  refresh_data.py  reorganize_data_structure.py  run_tests.py  update_seeds.py  validate_pipeline_data.py  validate_tests.py
Scraping_project/visualizer/: README.md  server.py
(+139 files in other folders)
